--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $primary-color-100: #4755bd;
 $primary-color-700: #800080;
 
+$secondary-color-200: #bcced4;
+$secondary-color-500: #80949b;
 $secondary-color-700: #373d3f;
-$secondary-color-200: #718288;
