--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&display=swap');
+
 $primary-color-100: #4755bd;
 $primary-color-700: #800080;
 
+$secondary-color-100: #ffffff;
 $secondary-color-200: #bcced4;
 $secondary-color-500: #80949b;
 $secondary-color-700: #373d3f;
+
+$success-color: #2e913b;
+
+$container-border-radius: 5px;
