Add TodoFooter. Add Button control. Add styling

--- a/src/components/ui/molecules/TodoTile/TodoTile.module.scss
+++ b/src/components/ui/molecules/TodoTile/TodoTile.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   padding: 15px;
   border-radius: $container-border-radius;
+  border-color: $secondary-color-200;
   justify-content: flex-start;
   background-color: $secondary-color-100;
   width: 30vw;
