--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,5 +4,5 @@ body {
   margin: 0;
   overflow: hidden;
   max-height: 100vh;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: $font-family;
 }
