--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,9 +5,12 @@ $primary-color-700: #800080;
 
 $secondary-color-100: #ffffff;
 $secondary-color-200: #bcced4;
-$secondary-color-500: #80949b;
+$secondary-color-300: #9baaaf;
+$secondary-color-500: #6b7a80;
 $secondary-color-700: #373d3f;
 
 $success-color: #2e913b;
 
 $container-border-radius: 5px;
+
+$font-family: 'Josefin Sans', sans-serif;
