--- a/src/components/ui/molecules/TodoTile/TodoTile.module.scss
+++ b/src/components/ui/molecules/TodoTile/TodoTile.module.scss
@@ -2,24 +2,31 @@
 
 .TodoTile {
   display: flex;
-  padding: 15px;
-  border-radius: $container-border-radius;
-  border-color: $secondary-color-200;
   justify-content: flex-start;
+  padding: 15px;
+  border: 1px solid $secondary-color-150;
+  border-radius: $container-border-radius;
   background-color: $secondary-color-100;
-  width: 30vw;
 
-  input[type='checkbox'] {
+  &:first-child {
     width: 40px;
   }
 
-  input[type='text'] {
-    margin-left: 5px;
-    border: none;
-    width: 100%;
+  .Checkbox {
+    width: 50px;
+  }
 
-    &:focus {
-      outline: none;
+  .Input {
+    &[type='text'] {
+      margin-left: 5px;
+      border: none;
+      width: 100%;
+      overflow: hidden;
+  
+      &:focus {
+        outline: none;
+      }
+
     }
   }
 }
