--- a/src/components/ui/molecules/TodoTile/TodoTile.module.scss
+++ b/src/components/ui/molecules/TodoTile/TodoTile.module.scss
@@ -1,6 +1,7 @@
 @import '../../../../styles/variables.scss';
 
 .TodoTile {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   padding: 15px;
@@ -20,13 +21,29 @@
     &[type='text'] {
       margin-left: 5px;
       border: none;
-      width: 100%;
       overflow: hidden;
   
       &:focus {
         outline: none;
       }
 
+    }
+  }
+
+  .CloseButton {
+    width: 100px;
+    height: 30px;
+
+    .CloseIcon {
+      width: 100px;
+      height: 30px;
+      color: $secondary-color-200;
+    }
+
+    &:hover {
+      .CloseIcon {
+        color: $secondary-color-700;
+      }
     }
   }
 }
