--- a/src/components/ui/molecules/TodoHeader/TodoHeader.module.scss
+++ b/src/components/ui/molecules/TodoHeader/TodoHeader.module.scss
@@ -4,13 +4,11 @@
   width: 100%;
   background-color: transparent;
   position: relative;
+  overflow: hidden;
 
   h1 {
     letter-spacing: 10px;
-    color: black;// $secondary-color-100;
-  }
-
-  * {
-    width: 100%;
+    color: $secondary-color-100;
+    margin-bottom: 40px;
   }
 }
