--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $primary-color-100: #4755bd;
 $primary-color-700: #800080;
 
 $secondary-color-100: #ffffff;
-$secondary-color-150: #c8dde4;
+$secondary-color-150: #e9eef0;
 $secondary-color-200: #bcced4;
 $secondary-color-300: #9baaaf;
 $secondary-color-500: #6b7a80;
