Change color of placeholder

--- a/src/components/ui/atoms/TextInput/TextInput.module.scss
+++ b/src/components/ui/atoms/TextInput/TextInput.module.scss
@@ -3,4 +3,8 @@
 input {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
+
+  &::placeholder {
+    color: $secondary-color-200;
+  }
 }
