--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&display=swap');
 
-$primary-color-100: #7b84cc;
+$primary-color-100: #5464da;
 $primary-color-700: #a12fa1;
 
 $secondary-color-100: #ffffff;
