--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $secondary-color-100: #ffffff;
 $secondary-color-150: #e9eef0;
 $secondary-color-200: #bcced4;
 $secondary-color-300: #9baaaf;
+$secondary-color-400: #8b989c;
 $secondary-color-500: #6b7a80;
 $secondary-color-700: #373d3f;
 
