Change TodoTile content for displaying value. Improve border styling. Fix cypress tests

--- a/src/components/ui/molecules/TodoList/TodoList.module.scss
+++ b/src/components/ui/molecules/TodoList/TodoList.module.scss
@@ -3,6 +3,8 @@
 .TodoList {
   max-height: 50vh;
   overflow-x: hidden;
+  border-top-left-radius: $container-border-radius;
+  border-top-right-radius: $container-border-radius;
 }
 
 .NoContent {
