Fix bug with incorrect place to reorder. Adjust styling

--- a/src/components/ui/molecules/TodoTile/TodoTile.module.scss
+++ b/src/components/ui/molecules/TodoTile/TodoTile.module.scss
@@ -46,7 +46,7 @@
     text-overflow: ellipsis;
   }
 
-  .CrossedInput {
+  .CrossedContainer {
     color: $secondary-color-200;
     text-decoration: line-through;
   }
